syntax = "proto3";

option java_multiple_files = true;
option java_package = "br.com.pix";
option java_outer_classname = "DesafioPix";
option objc_class_prefix = "HLW";

package br.com.pix;
import "google/protobuf/timestamp.proto";

service ChavePIXService {
  rpc salvarChave (RegistraChavePixRequest) returns (RegistraChavePixResponse) {}
}
service RemocaoChavePixService{
  rpc remover (RemoverChavePixRequest) returns (RemoverChavePixResponse) {}
}

service ConsultaChavePixService{
  rpc consultar (ConsultarChavePixRequest) returns (ConsultarChavePixResponse) {}
}

service ListaChavePixService{
  rpc listar (ListarChavesPixRequest) returns (ListarChavesPixResponse) {}
}

enum TipoChave {
  INVALID_KEY_TYPE  = 0;
  CPF = 1;
  PHONE = 2;
  EMAIL = 3;
  RANDOM  = 4;
  CNPJ =  5; //não foi solicitado, mas consta no Swagger


}

enum TipoConta {
  INVALID_ACCOUNT_TYPE = 0;
  CONTA_POUPANCA = 1;
  CONTA_CORRENTE = 2;
}

message RegistraChavePixRequest{
  string clientId = 1;
  TipoChave tipoDeChave = 2;
  string chave = 3;
  TipoConta tipoDeConta = 4;
}

message RegistraChavePixResponse{
  string pixId = 1;
  string chave = 2;
}

message RemoverChavePixRequest{
  string pixId = 1;
  string idcliente = 2;
}

message RemoverChavePixResponse{
  string pixId = 1;
  string idcliente = 2;
}


message ConsultarChavePixRequest{
  string idcliente = 1;
  string pixId     = 2;
  string chave     = 3;
}

message ConsultarChavePixResponse{

  string nomeTitular = 1;
  string cpfTitular = 2;
  string nomeInstituicao = 3;
  string agencia = 4;
  string numero = 5;
  TipoConta tipoConta = 6;
  TipoChave tipoChave = 7;
  string chave = 8;
  google.protobuf.Timestamp criadaEm = 9;
  string idcliente = 10;
  string pixId = 11;

}


message ListarChavesPixRequest {
  string clienteId = 1;
}

message ListarChavesPixResponse {

  string idCliente = 1;
  repeated PixKey chave = 2;

  message PixKey{
    string idPix = 1;
    TipoChave tipoChave = 2;
    string chave = 3;
    TipoConta tipoConta = 4;
    google.protobuf.Timestamp registradoEm = 5;
  }
}


/*
ix ID (opcional - necessário somente para abordagem 1);
Identificador do cliente (opcional - necessário somente para abordagem 1);
Tipo da chave;
Valor da chave;
Nome e CPF do titular da conta;
Dados da conta vinculada a chave Pix:
nome da instituição financeira;
agência, número da conta e tipo da conta (Corrente ou Poupança);
Data/hora de registro ou criação da chave;*/
